--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       EM BREVE
     </div>
     <div id="descricao">
-      (99) 99999-9999<br>
-      falecom@task.com.br
+      Matemática Escolar para o ENEM
+     
     </div>
    </a>
   </div>
