--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       EM BREVE
     </div>
     <div id="descricao">
-      Matemática Escolar para o ENEM
+      Matemática Escolar 
      
     </div>
    </a>
