--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
   <div class="box">
-    <img src="tsurupretobranco.png" id="logo">
+    <img src="./tsurupretobranco.png" id="logo">
     <div id="title">
       EM BREVE
     </div>
